--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_a_Conversion_Host.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_a_Conversion_Host.adoc
@@ -1,5 +1,5 @@
-[[Creating_a_Conversion_Host]]
-= Creating a Conversion Host
+[[Enabling_a_Conversion_Host]]
+= Enabling a Conversion Host in CloudForms
 
 Configure a Red Hat Virtualization Host as a conversion host:
 
@@ -12,4 +12,3 @@ Configure a Red Hat Virtualization Host as a conversion host:
 . Select the same host, click the *Configuration* drop-down button, and select *Edit this item*.
 . In the *Default* tab of the *Endpoints* section, enter the *Username* `root` and the password.
 . Click *Validate*. If a success message is displayed, click *Save*.
-
