--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -13,16 +13,9 @@ include::common/attributes/cfme.adoc[]
 :cfme:
 
 :numbered:
-include::doc/con_Introduction.adoc[]
+include::doc/con_Introduction.adoc[leveloffset=+1]
 include::doc/asm_Installation.adoc[leveloffset=+1]
 include::doc/asm_Discovery.adoc[leveloffset=+1]
 include::doc/asm_Planning.adoc[leveloffset=+1]
 include::doc/asm_Migration.adoc[leveloffset=+1]
 include::doc/asm_Post-migration.adoc[leveloffset=+1]
-
-
-
-
-
-
-
