--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,21 +1,54 @@
 [[Creating_a_Migration_Plan]]
 = Creating and Running a Migration Plan
 
+[discrete]
+== Prerequisite for Large Migration
+
+If you are migrating a large number of virtual machines, create a CSV file specifying the virtual machine names (mandatory) and provider (optional), in the following format:
+[options="nowrap" subs="+quotes,verbatim"]
+----
+Name, Provider
+_vm01_, _vSphere3_
+_vm02_, _vSphere3_
+_vm03_, _vSphere3_
+...
+----
+
+[discrete]
+== Creating and Running the Migration Plan
+
 Create and run a migration plan:
 
 . Go to menu:Compute[Migration] and click *Create Migration Plan*.
+
 . Select the infrastructure mapping from the drop-down list.
-. Enter the name of your migration plan and click *Next*.
-. Select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*.  *(%AP: Should CSV file method be documented instead? Or in addition to discovered VMs? If so, should it be here or in an appendix?)*
+
+. Enter the name of your migration plan.
+
+. Discover the virtual machines to migrate:
+
+* If you are migrating a small number of virtual machines:
+
+.. Click *Next*.
+.. Select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*.
+
+* If you are migrating a large number of virtual machines:
+
+.. (Optional) To validate your infrastructure mapping, select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*. If your virtual machines appear in the list, the infrastructure mapping is correct. Click *Back*.
+
+.. Select *Import a CSV file with a list of VMs to be migrated* and click *Next*.
+.. Click *Import*, browse to the CSV file, and click *Open*.
+
 . Select the virtual machines to migrate and click *Next*.
+
 . Select *Start Migration Immediately* and click *Create*.
-. Click *Close*. The migration plan may take some time to complete. "In Progress Plans", status of the datastores and VMs, and elapsed time are displayed.
+
+. Click *Close*. The migration plan may take some time to complete. "In Progress Plans", the status of the datastores and VMs, and the elapsed time are displayed.
 +
-When the migration is complete, a "Completed Migrations" message appears, with the number of successfully migrated virtual machines.
+When the migration is complete, a "Completed Migrations" message is displayed, with the number of successfully migrated virtual machines.
 
-If a migration plan does not complete successfully, check the log: 
+If a migration plan does not complete successfully, check the log:
 
-. Select *Completed Plans* from the migration plan drop-down list. 
-. Click the unsuccessful plan to open the details view. 
+. Select *Completed Plans* from the migration plan drop-down list.
+. Click the unsuccessful plan to open the details view.
 . Click *Download Log* to download the migration log.
-
