--- a/doc-V2V_Guide/cfme/doc/modules/ref_Storage_to_CF_link.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Storage_to_CF_link.adoc
@@ -1,1 +1,1 @@
-After you have added your storage domain to the data center, you can install CloudForms. Go to xref:Installing_CloudForms[].
+After you have added your storage domain to the data center, you can install CloudForms. Go to xref:proc_Installing_cloudforms_automatically[].
