--- a/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
@@ -14,7 +14,7 @@ Complete the following procedure to add an Amazon EC2 cloud provider in {product
 +
 [NOTE]
 ====
-In some cases, there is a need to point to a specific URL instead of the standard URL endpoint, see link:https://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpce-interface.html[Interface VPC Endpoints (AWS PrivateLink)], for example. Therefore, AWS allows users to set a custom endpoint URL when connecting to certain services, which you can add in the {product-title_short} user interface per Amazon EC2 provider.
+AWS allows users to set a custom endpoint URL when connecting to certain services, which you can add in the {product-title_short} user interface per Amazon EC2 provider. See link:https://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpce-interface.html[Interface VPC Endpoints (AWS PrivateLink)] for more information.
 ====
 +
 .. Generate an *Access Key* in the *Security Credentials* of your Amazon AWS account.
