--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_a_host_to_the_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_a_host_to_the_Manager.adoc
@@ -11,7 +11,7 @@ Add a host to the Manager:
 . In the Administration Portal, click menu:Compute[Hosts].
 . Click btn:[New].
 . Use the drop-down list to select the *Data Center* and *Host Cluster* for the new host.
-. Enter the *Name* and the *Address* of the new host. The standard SSH port, port 22, is auto-filled in the *SSH Port* field.
+. Enter the *Name* and the *Address* of the new host. The standard SSH port, *22*, is auto-filled in the *SSH Port* field.
 . Enter the `root` password.
 . Click btn:[OK]. The power management reminder is displayed.
 . Click btn:[OK].
@@ -22,4 +22,3 @@ The new host appears in the list of hosts with the status, `Installing`, and you
 ====
 Keep the environment up-to-date. See link:https://access.redhat.com/articles/2974891[] for more information. Since bug fixes for known issues are frequently released, Red Hat recommends using scheduled tasks to update the hosts and the Manager.
 ====
-
