--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Host.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Host.adoc
@@ -52,7 +52,7 @@ Your conversion host machine must meet the following minimum requirements to sup
 When RHVH restarts, `nodectl check` performs a health check on the host and displays the result when you log in on the command line. The message `node status: OK` or `node status: DEGRADED` indicates the health status. Run `nodectl check` to get more information. The service is enabled by default.
 ====
 +
-. Once the installation is complete, log in to the Cockpit user interface at `https://_HostFQDNorIP_:9090` to register the host with the Content Delivery Network.
+. Once the installation is complete, log in to the Cockpit user interface at +https://_HostFQDNorIP_:9090+ to register the host with the Content Delivery Network.
 . Click *Subscriptions*, click *Register System*, and enter your Customer Portal user name and password. The *Red Hat Virtualization Host* subscription is automatically attached to the system.
 . Click *Terminal*, and enable the `Red Hat Virtualization Host 7` repository to allow later updates to the Red Hat Virtualization Host:
 [options="nowrap" subs="+quotes,verbatim"]
@@ -61,4 +61,4 @@ When RHVH restarts, `nodectl check` performs a health check on the host and disp
 # subscription-manager repos --enable=rhel-7-server-rhvh-4-rpms
 ----
 
-You can now add the host to your Red Hat Virtualization environment. See xref:Adding_a_host_to_the_Manager[].
+You can now add the host to your Red Hat Virtualization environment.
