--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
@@ -1,7 +1,7 @@
 [id="proc_Installing_cloudforms_automatically"]
-= Installing CloudForms Automatically
+= Installing CloudForms and Configuring RHV Conversion Hosts
 
-*(%AP: This section needs to be reviewed. Moran Goldboim says the user needs to sign into the Customer Portal. When does this step occur?)*
+*(%AP: Moran Goldboim says the user needs to sign into the Customer Portal. When does this step occur?)*
 
 CloudForms is installed automatically using the oVirt Ansible role, `oVirt.manageiq`. The conversion host is created with the `conversion_host_enable` playbook.
 
@@ -12,7 +12,7 @@ Ansible roles are located in +/usr/share/doc/ovirt-ansible-roles-_version_/examp
 
 . Create a working directory on the Red Hat Virtualization Manager machine, for example, `/my_ansible`.
 
-. In your working directory, create a `passwords.yml` file containing the engine password:
+. In your working directory, create a `passwords.yml` file containing the Manager password:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -57,15 +57,15 @@ You will be asked for a vault password.
 
 . Download the latest VMware VDDK package from link:https://www.vmware.com/support/developer/vddk/[https://www.vmware.com/support/developer/vddk/]. *(%AP: do we need to specify a version or is 'latest' OK?)*
 
-. Use SCP to copy the VMware VDDK package to the Manager machine.
+. Secure copy the VMware VDDK package to the Manager machine.
 
 . Run the `conversion_host_enable` playbook:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# ansible-playbook -i _conversion_host_ or _ansible_host_file_, conversion_host_enable.yml -e 'v2v_vddk_package_name=_vddk_package_name_.tar.gz' -e 'v2v_vddk_package_url=http://_hostname_to_package_location_/vddk/VMware-vix-disklib-stable.tar.gz'
+# ansible-playbook -i _conversion_host_ or _ansible_host_file_ conversion_host_enable.yml -e 'v2v_vddk_package_name=_vddk_package_name_.tar.gz' -e 'v2v_vddk_package_url=http://_hostname_to_package_location_/vddk/VMware-vix-disklib-stable.tar.gz'
 ----
-*(%AP: What is the vddk package url supposed to be? Package path on Manager? Or conversion host? Is there a comma after `-i _conversion_host_ or _ansible_host_file_`? What is the 'conversion_host' file? For 'ansible_host_file', can we use /etc/ansible/hosts?)*
+*(%AP: What is the vddk package url supposed to be? Package path on Manager? Or conversion host? What is the 'conversion_host' file? For 'ansible_host_file', can we use /etc/ansible/hosts?)*
 
 . Run the `conversion_host_check` playbook to verify that the conversion host is enabled:
 +
