--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -11,7 +11,7 @@
 
 {product-title} is Red Hat's solution for moving your virtual machines from VMware to Red Hat Virtualization. This solution is intended for VMware systems with more than 200 hosts (hypervisors) and more than 2000 virtual machines. By moving from VMware to Red Hat Virtualization, you can reduce licensing costs and dependence on proprietary virtualization, while investing in transformative technologies such as multi-cloud management, automation, and containers.
 
-Red Hat Virtualization is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. Virtualization allows users to easily provision new virtual servers and workstations, and provides more efficient use of physical server resources. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+Red Hat Virtualization is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
 The infrastructure migration is performed with Red Hat CloudForms. CloudForms is a user interface, providing the control and automation required to manage challenging enterprise environments.
 
