added note to not recommend playbooks to populate dynamic dialog boxes

--- a/doc-Scripting_Actions/topics/Ansible_method.adoc
+++ b/doc-Scripting_Actions/topics/Ansible_method.adoc
@@ -32,7 +32,7 @@ image:../images/1862.png[image] (*Add a New Method*).
 +
 [NOTE]
 ====
-Input parameters become extra vars, with substition enabled. This overcomes the lack of a dialog which would normally allow for the input of additional information. For more information on extra vars, see the Ansible documentation. 
+Input parameters become extra vars, with substitution enabled. This overcomes the lack of a dialog which would normally allow for the input of additional information. For more information on extra vars, see the Ansible documentation. 
 ====
 +
 . Click *Add* when finished. 
