added note to not recommend playbooks to populate dynamic dialog boxes

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -54,7 +54,8 @@ When provisioning a service, input will be needed from the requester. Service di
 ===== Adding a Service Dialog
 [IMPORTANT]
 ====
-When creating a service dialog for use with Ansible playbook catalog items, variable elements must use the prefix *param_* when assigning the value. For example, a new variable labeled *key1* should have its value set as *param_key1*.
+* When creating a service dialog for use with Ansible playbook catalog items, variable elements must use the prefix *param_* when assigning the value. For example, a new variable labeled *key1* should have its value set as *param_key1*.
+* Using Ansible playbooks to populate dynamic dialog fields is not recommended due to delay times caused by the overhead of interaction between systems.
 ====
 include::common/service-dialog-creation.adoc[]
 
